[tool.poetry]
name = "python-incidentio-client-example"
version = "0.1.0"
description = "Python client example for Incident.io"
repository = "https://github.com/expobrain/python-incidentio-client/tree/main/example"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
python-incidentio-client = { path = "..", develop = true }
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.5"
black = "^23.9"
autoflake = "^1.7"
pyupgrade = "^3.8.0"
flake8 = "^5.0.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
